--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
 
     <Button
-        android:id="@+id/locate"
+        android:id="@+id/btn_locate"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,14 +32,23 @@
         tools:layout_editor_absoluteY="213dp" />
 
     <Button
-        android:id="@+id/map"
+        android:id="@+id/btn_map"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/locate"
+        android:layout_alignTop="@+id/btn_locate"
         android:layout_marginStart="11dp"
         android:layout_marginTop="0dp"
-        android:layout_toEndOf="@+id/locate"
+        android:layout_toEndOf="@+id/btn_locate"
         android:text="@string/map" />
+
+    <Button
+        android:id="@+id/btn_reset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/btn_locate"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="90dp"
+        android:text="Reset" />
 
 </RelativeLayout>
